Remove all usage of PrivilegedAction
Motivation:
The SecurityManager and surrounding mechanism like AccessController and PrivilegedAction are deprecated for removal.

Modification:
Remove all usages of these APIs.

Result:
More future-proof code.